--- a/producer/package.json
+++ b/producer/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "producer.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node src/index.js"
+    "run": "node src/index.js",
+    "build": "node esbuild.config.mjs"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "esbuild": "^0.25.2",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "jsdoc": "^4.0.4"
