--- a/consumer/package.json
+++ b/consumer/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "consumer": "node consumer.js"
+    "consumer": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "fastify": "^5.3.0",
     "kafkajs": "^2.2.4",
     "uuid": "^11.1.0"
   },
